--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width initial-scale=1.0'>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width initial-scale=1.0" />
     <title>Boilermaker</title>
     <link rel="stylesheet" href="/style.css" />
+    <script
+      defer
+      src="https://www.gstatic.com/firebasejs/6.2.3/firebase-app.js"
+    ></script>
+
     <script defer src="/bundle.js"></script>
   </head>
   <body>
     <div id="app"></div>
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: 'AIzaSyA5VUr8RO_nVqn31StLpx960qfn1P3dqcw',
+        authDomain: 'hopperio.firebaseapp.com',
+        databaseURL: 'https://hopperio.firebaseio.com',
+        projectId: 'hopperio',
+        storageBucket: '',
+        messagingSenderId: '272283587942',
+        appId: '1:272283587942:web:3f45965dd9b0984b'
+      }
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig)
+    </script>
   </body>
 </html>
-
