feat(materialui): styled navbar and added a footer

--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width initial-scale=1.0" />
-    <title>Boilermaker</title>
+    <title>Hopper.io</title>
     <link
+      href="https://fonts.googleapis.com/css?family=Audiowide|Coiny|Monoton|Roboto:300,400,500,700&display=swap"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
+    /> -->
+    <script src="https://kit.fontawesome.com/b243be361a.js"></script>
     <link rel="stylesheet" href="/style.css" />
     <script defer src="/bundle.js"></script>
   </head>
