--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     /> -->
     <script src="https://kit.fontawesome.com/b243be361a.js"></script>
     <link rel="stylesheet" href="/style.css" />
+    <script src="https://use.fontawesome.com/337ee3c2a3.js"></script>
     <script defer src="/bundle.js"></script>
   </head>
   <body>
